<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent">

	
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/layoutTimeout" android:layout_marginTop="20dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_width="fill_parent" android:orientation="vertical"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/labelTimeout" android:text="@string/labelTimeout" android:textSize="20dp"></TextView>


<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkTimeout" android:textSize="20dp" android:text="@string/checkTimeout"></CheckBox><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textTimeout" android:text="0" android:gravity="right" android:layout_gravity="right" android:inputType="number" android:minEms="3" android:layout_marginLeft="10dp" android:textSize="20dp"></EditText></LinearLayout>
</LinearLayout>

<LinearLayout android:id="@+id/layoutStart" android:layout_below="@+id/layoutTimeout" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginTop="20dp" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal">
<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkStart" android:text="@string/checkStart" android:textSize="20dp"></CheckBox>
<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textStart" android:textSize="20dp" android:layout_marginLeft="10dp" android:layout_gravity="right" android:cursorVisible="false" android:editable="false" android:maxLines="1" android:text="--:--" android:gravity="center" android:minWidth="80dp" android:clickable="true" android:textColor="#000000" android:focusable="false" android:focusableInTouchMode="false"></EditText>

</LinearLayout>

<LinearLayout android:id="@+id/layoutStop" android:layout_below="@+id/layoutStart" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginTop="20dp" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal">
<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkStop" android:text="@string/checkStop" android:textSize="20dp"></CheckBox>
<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textStop" android:textSize="20dp" android:layout_marginLeft="10dp" android:layout_gravity="right" android:cursorVisible="false" android:editable="false" android:maxLines="1" android:text="--:-- " android:maxLength="5" android:minEms="2" android:gravity="center" android:minWidth="80dp" android:clickable="true" android:textColor="#000000" android:focusable="false" android:focusableInTouchMode="false"></EditText>

</LinearLayout>


<!-- 
<TextView android:layout_height="wrap_content" android:id="@+id/labelAD" android:layout_above="@+id/ad" android:textSize="20dp" android:layout_width="fill_parent" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/labelAD"></TextView>
<com.admob.android.ads.AdView android:id="@+id/ad" android:layout_width="fill_parent" android:layout_height="wrap_content" myapp:backgroundColor="#000000" myapp:primaryTextColor="#FFFFFF" myapp:secondaryTextColor="#CCCCCC" android:layout_alignParentBottom="true"/>  
 -->

<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginTop="20dp" android:layout_width="fill_parent" android:gravity="center" android:layout_alignParentBottom="true"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnApply" android:text="@string/btnApply" android:layout_marginRight="20dp" android:textSize="20dp" android:paddingRight="10dp" android:paddingLeft="10dp" android:minEms="4"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnCancel" android:text="@string/btnCancel" android:layout_marginLeft="20dp" android:textSize="20dp" android:paddingLeft="10dp" android:paddingRight="10dp" android:minEms="4"></Button>
</LinearLayout>
</RelativeLayout>
